--- a/desk-sidebar.html
+++ b/desk-sidebar.html
@@ -8,7 +8,9 @@ The Jviz Project is under the MIT License. See https://github.com/jviz/jviz/blob
 <link rel="import" href="../polymer/polymer.html">
 <link rel="import" href="../jviz/jviz.html">
 <link rel="import" href="../jviz-styles/jviz-styles.html">
-<link rel="import" href="../jviz-icons/jviz-icons.html">
+
+<!-- Import desk components -->
+<link rel="import" href="../desk-styles/desk-styles.html">
 
 <!-- Import sidebar elements -->
 <link rel="import" href="./desk-sidebar-item.html">
