desk-sidebar-item.html: import desk shared styles

--- a/desk-sidebar-item.html
+++ b/desk-sidebar-item.html
@@ -10,6 +10,9 @@ The Jviz Project is under the MIT License. See https://github.com/jviz/jviz/blob
 <link rel="import" href="../jviz-styles/jviz-styles.html">
 <link rel="import" href="../jviz-icons/jviz-icons.html">
 
+<!-- Import desk components -->
+<link rel="import" href="../desk-styles/desk-styles.html">
+
 <!-- Sidebar item element -->
 <dom-module id="desk-sidebar-item">
   <template>
